<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Findacat</string>
    <string name="cat_fact">Cat Fact</string>
    <string name="cat_name">Name: %s</string>
    <string name="cat_gender">Gender: %s</string>
    <string name="cat_breed">Breed: %s</string>
    <string name="cat_zip">Zip: %s</string>
    <string name="share">share</string>
    <string name="favourite">favourite</string>
    <string name="home">home</string>
    <string name="mail">email</string>
    <string name="search_zip">Search zip</string>
    <string name="enter_zip">Enter zip</string>
    <string name="zip_unknown">Zip code is unknown!</string>
    <string name="zip_invalid">Zip code is invalid. Please try again.</string>
    <string name="no_internet">Internet not connected. Please try again.</string>
    <string name="cat_fact_failure">Cat Fact Api failure!</string>
    <string name="share_text">Hi! I found a cat named %1$s in %2$s! Check this out! %3$s</string>
    <string name="email_text">Hi! I am interested in the cat named %s. Can I have more information about this cat?</string>
    <string name="no_cat_data_found">No cat data found!</string>
    <string name="petfinder_fail">Petfinder Api fail!</string>
    <string name="location_update_fail">Location update fail!</string>
</resources>
