<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_favourite"
        android:icon="@drawable/ic_outline_favorite_border_24px"
        android:title="@string/favourite"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_mail"
        android:icon="@drawable/ic_outline_mail_outline_24px"
        android:title="@string/mail"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_share"
        android:icon="@drawable/ic_outline_share_24px"
        android:title="@string/share"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
        app:showAsAction="always" />
</menu>